<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_my_topics"
            android:icon="@drawable/ic_book"
            android:title="@string/nav_my_topics" />

        <item
            android:id="@+id/nav_requests"
            android:icon="@drawable/ic_request"
            android:title="@string/nav_requests" />

        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_chat"
            android:title="@string/nav_messages" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/nav_profile" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>